# cosense-rag-based-on-local-llm

./: .gitignore  Makefile  README.md  architecture.md  compose.yml  ruff.toml
.github/: copilot-instructions.md
api-embedding/: Dockerfile  README.md  main.py  pyproject.toml
api-llm/: Dockerfile  README.md  main.py  pyproject.toml
api-search/: Dockerfile  README.md  main.py  pyproject.toml
batch/: README.md  main.py  pyproject.toml
elasticsearch/: Dockerfile  compose.yml
frontend/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
shared/: README.md  models.py  pyproject.toml
shared/shared/: __init__.py
worklog/: plan.md  plan2.md
