[project]
name = "api-llm"
version = "0.1.0"
description = "Inference Engine for Scrapbox RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic",
    "shared",
]

[tool.uv.sources]
shared = { path = "../shared" }

[tool.uv]
dev-dependencies = [
    "pytest",
]
