[project]
name = "api-search"
version = "0.1.0"
description = "Search Engine Wrapper for Scrapbox RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "elasticsearch>=8.0.0,<9.0.0",
    "httpx",
    "pydantic",
    "shared",
    "aiohttp",
]

[tool.uv.sources]
shared = { path = "../shared" }

[tool.uv]
dev-dependencies = [
    "pytest",
]
