[project]
name = "batch"
version = "0.1.0"
description = "Data Ingestion for Scrapbox RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic",
    "tqdm",
    "shared",
]

[tool.uv.sources]
shared = { path = "../shared" }

[tool.uv]
dev-dependencies = [
    "pytest",
]
